created basic user journey

--- a/app/views/generic/current/details/confirmation.html
+++ b/app/views/generic/current/details/confirmation.html
@@ -1,6 +1,6 @@
 {% set hideBackButton = true %}
 
-{% extends 'new/layout.html' %}
+{% extends 'generic/layout.html' %}
 
 {% block pageTitle %}
   Confirmation
@@ -25,7 +25,7 @@
       </p>
       
       <p>
-        If you do not get an email within 72 hours, call the RPA helpline and follow the options for the Farming Transformation Fund scheme.
+        If you do not get an email within 72 hours, call the RPA helpline and follow the options for the Generic Fund scheme.
       </p>
 
       {% if data['top-fruit-storage'] == 'Yes' %}
