--- a/app/views/generic/current/eligibility/common/elim-country.html
+++ b/app/views/generic/current/eligibility/common/elim-country.html
@@ -1,4 +1,4 @@
-{% extends 'new/layout.html' %}
+{% extends 'generic/layout.html' %}
 
 {% block pageTitle %}
     You cannot apply for a grant from this scheme - Country 
