country error copy change

--- a/app/views/generic/current/eligibility/common/country-error.html
+++ b/app/views/generic/current/eligibility/common/country-error.html
@@ -24,7 +24,7 @@
                     <div class="govuk-error-summary__body">
                     <ul class="govuk-list govuk-error-summary__list">
                         <li>
-                        <a href="#country">Choose an option</a>
+                        <a href="#country">Select an option</a>
                         </li>
                     </ul>
                     </div>
@@ -35,7 +35,7 @@
                     idPrefix: 'country',
                     name: 'country',
                     errorMessage: {
-                        text: "Choose an option"
+                        text: "Select an option"
                         },
                     classes: 'govuk-radios--inline',
                     fieldset: {
