--- a/app/views/generic/index.html
+++ b/app/views/generic/index.html
@@ -57,7 +57,7 @@
         <h2 class="govuk-heading-l">User research</h2>
          
         <p class='govuk-list app-list--definition'>
-            <a href='generic/current/start' class="govuk-link--no-visited-state">Start page</a></p>
+            <a href='/generic/current/start' class="govuk-link--no-visited-state">Start page</a></p>
             
       </div>
 
