adding generic checker link to main proto page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,10 +32,16 @@
   </thead>
   <tbody class="govuk-table__body">
 
+    <tr class="govuk-table__row">
+    <td class="govuk-table__cell"><a href="generic/index" class="govuk-lik govuk-link--no-visited-state">Generic Grant (2024)</a>
+      </td>
+    <td class="govuk-table__cell">Checker (Last updated on 10 Oct 2024)</td>
+  </tr>
+
   <tr class="govuk-table__row">
     <td class="govuk-table__cell"><a href="water-r3/index" class="govuk-lik govuk-link--no-visited-state">Water Management Grant (2024)</a>
       </td>
-    <td class="govuk-table__cell">Checker (R3, Last updated on 29 Aug 2024)</td>
+    <td class="govuk-table__cell">Checker (R3, Last updated on 3 Oct 2024)</td>
   </tr>
 
   <tr class="govuk-table__row">
