--- a/app/views/generic/current/details/consent.html
+++ b/app/views/generic/current/details/consent.html
@@ -1,7 +1,7 @@
 {% extends 'generic/layout.html' %}
 
 {% block pageTitle %}
-  Check all your answers
+  Confirm and send
 {% endblock %}
 
 {% block beforeContent %}
