made start page content generic

--- a/app/views/generic/current/start-bu.html
+++ b/app/views/generic/current/start-bu.html
@@ -38,13 +38,13 @@
         
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          item 1
+          are a grower or producer of x
         </li>
         <li>
-          item 2
+          are a business doing x
         </li>
         <li>
-          item 3
+          produce x 
         </li>
       </ul>
 
@@ -57,11 +57,11 @@
       </p>
 
       <p>
-        The minimum grant for project items is £xxx (x% of £xx,000). The maximum grant you can apply for is £xxx. 
+        The minimum grant for project items is £20,000 (50% of £40,000). The maximum grant you can apply for, including solar, is £500,000. 
       </p>
 
       {{ govukInsetText ({
-        text: 'Highlighted content here'
+        text: 'If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA).'
       }) }}
 
       {{ govukButton({
@@ -80,16 +80,16 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          item 1
+          information about your business (for example, number of employees, turnover)
         </li>
         <li>
-          item 2
+          information about the project (for example, the types of products being processed and how you will add value, the impact the project will have)
         </li>
         <li>
-          item 3
+          a list of the items you'd like to buy for the project
         </li>
         <li>
-            item 4
+            an estimate of the total cost of the items
         </li>
       </ul>
 
@@ -98,7 +98,7 @@
       </h2>
 
       <p>
-        If you have any problems using the online service, contact xxx
+        If you have any problems using the online service, contact the RPA.
       </p>
 
       <h3 class="govuk-heading-s">
@@ -106,7 +106,7 @@
       </h3>
 
       <p>
-        Telephone: xxxx xxxx xx
+        Telephone: 03000 200 301
       </p>
 
       <p>
@@ -114,7 +114,7 @@
       </p>
 
       <p>
-        <a href="https://www.gov.uk/call-charges">
+        <a href="#">
           Find out about call charges
         </a>
       </p>
@@ -125,7 +125,7 @@
 
       <p>
         <a href="mailto:FTF@rpa.gov.uk">
-          xxx@xxx.gov.uk
+          FTF@rpa.gov.uk
         </a>
       </p>
 
