--- a/app/views/generic/current/eligibility/common/country-error.html
+++ b/app/views/generic/current/eligibility/common/country-error.html
@@ -62,7 +62,7 @@
                             value: 'No',
                             checked: true if data['country'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-country'
+                                    'data-next': 'exit-country'
                                 }
                         }
                     ]
