making reference number generic

--- a/app/views/generic/current/details/confirmation.html
+++ b/app/views/generic/current/details/confirmation.html
@@ -15,7 +15,7 @@
         Details submitted
        </h1>
     <div class="govuk-panel__body">
-      Your reference number<br><strong>AV-VMA-A54</strong>
+      Your reference number<br><strong>XX-XXX-XXX</strong>
     </div>
    </div>
 
