account header layout template

--- a/app/views/end-to-end/current/eligibility/common/login.html
+++ b/app/views/end-to-end/current/eligibility/common/login.html
@@ -1,7 +1,7 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-    Login
+    Sign in
 {% endblock %}
 
 {% block content %}
@@ -17,11 +17,11 @@
             <form method="post" action="farming-type">
 
                 <h1 class="govuk-heading-l">
-                    Login
+                    Sign in
                 </h1>
 
                 <p>
-                    You need to log in to apply for a Water Management Grant.
+                    You need to sign in to apply for a Water Management Grant.
                 </p>
 
                         {{ govukInput({
@@ -47,7 +47,7 @@
 
 
                 {{ govukButton ({
-                    html: 'Continue'
+                    html: 'Sign in'
                 }) }}
 
             </form>
