add account bar to all screens

--- a/app/views/end-to-end/current/eligibility/adding-value/smaller-abattoir.html
+++ b/app/views/end-to-end/current/eligibility/adding-value/smaller-abattoir.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Do you want to build a new smaller abattoir?
