--- a/app/views/end-to-end/current/eligibility/funding/business.html
+++ b/app/views/end-to-end/current/eligibility/funding/business.html
@@ -1,11 +1,7 @@
-{% extends "layout.html" %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
-  Project and business details
-{% endblock %}
-
-{% block beforeContent %}
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+   Business details
 {% endblock %}
 
 {% block content %}
