--- a/app/views/end-to-end/current/eligibility/funding/solar-pv.html
+++ b/app/views/end-to-end/current/eligibility/funding/solar-pv.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Will you buy a solar PV system with the grant?
