--- a/app/views/end-to-end/current/scoring/customers.html
+++ b/app/views/end-to-end/current/scoring/customers.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Who will your new customers be after this project?
