--- a/app/views/end-to-end/current/scoring/value.html
+++ b/app/views/end-to-end/current/scoring/value.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     How will this project add value to the produce?
