--- a/app/views/end-to-end/current/details/confirmation.html
+++ b/app/views/end-to-end/current/details/confirmation.html
@@ -1,6 +1,6 @@
 {% set hideBackButton = true %}
 
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
   Confirmation
