--- a/app/views/end-to-end/current/eligibility/adding-value/elim-smaller-abattoir-other.html
+++ b/app/views/end-to-end/current/eligibility/adding-value/elim-smaller-abattoir-other.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     You cannot apply for a grant from this scheme - Items needed
