--- a/app/views/end-to-end/current/eligibility/adding-value/top-fruit-storage.html
+++ b/app/views/end-to-end/current/eligibility/adding-value/top-fruit-storage.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Do you want to build new controlled atmosphere storage for top fruit?
