--- a/app/views/end-to-end/current/eligibility/common/project-items.html
+++ b/app/views/end-to-end/current/eligibility/common/project-items.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
      Which items eligible for grant funding are included in the project?
