--- a/app/views/end-to-end/current/eligibility/common/tenancy-length.html
+++ b/app/views/end-to-end/current/eligibility/common/tenancy-length.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Do you have a tenancy in place for 5 years after the final grant payment?
