--- a/app/views/end-to-end/current/eligibility/common/tenancy-maybe.html
+++ b/app/views/end-to-end/current/eligibility/common/tenancy-maybe.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     You may be able to apply for a grant from this scheme
