--- a/app/views/end-to-end/current/eligibility/funding/abstraction-licence.html
+++ b/app/views/end-to-end/current/eligibility/funding/abstraction-licence.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
      Does the project need an abstraction licence or a variation of one?
