--- a/app/views/end-to-end/current/eligibility/funding/change-summerabs.html
+++ b/app/views/end-to-end/current/eligibility/funding/change-summerabs.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Use of water during the summer
