--- a/app/views/end-to-end/current/eligibility/funding/remaining-cost.html
+++ b/app/views/end-to-end/current/eligibility/funding/remaining-cost.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
  {% set remainingCosts = data['cost'] * 0.6 %}
 
