--- a/app/views/end-to-end/current/eligibility/funding/solar-pv-cost.html
+++ b/app/views/end-to-end/current/eligibility/funding/solar-pv-cost.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     What is the estimated cost of buying and installing the solar PV system?
