--- a/app/views/end-to-end/current/scoring/collaboration.html
+++ b/app/views/end-to-end/current/scoring/collaboration.html
@@ -1,4 +1,4 @@
-{% extends 'water-r3/layout.html' %}
+{% extends 'end-to-end/layout-account.html' %}
 
 {% block pageTitle %}
     Will you work in partnership or collaborate with other farmers or producers?
