task list screen

--- a/app/views/end-to-end/current/eligibility/common/login2.html
+++ b/app/views/end-to-end/current/eligibility/common/login2.html
@@ -14,7 +14,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post" action="farming-type">
+            <form method="post" action="../../task-list/index">
 
                 <h1 class="govuk-heading-l">
                     Sign in
