--- a/app/views/end-to-end/current/eligibility/funding/reference-number.html
+++ b/app/views/end-to-end/current/eligibility/funding/reference-number.html
@@ -61,7 +61,7 @@
         </ul>
 
           <br>
-          <form class="form" action="login" method="post">
+          <form class="form" action="../common/login2" method="post">
               {{ govukButton ({
                     html: 'Sign out'
                 }) }}
