--- a/app/views/end-to-end/layout-account-no-back.html
+++ b/app/views/end-to-end/layout-account-no-back.html
@@ -14,12 +14,14 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     }) }}
 {% endblock %}
 
+
 {% block beforeContent %}
 
     <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-full">
-=
+
+    
              {{ govukPhaseBanner({
             tag: {
             text: "Prototype",
@@ -27,6 +29,27 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
              },
             html: 'This is not a full service. It is not production code and you might experience problems .'
             }) }}
+
+            <div class="govuk-grid-row" style="padding-top:16px;">
+                <div class="govuk-grid-column-two-thirds">
+                    <h3 class="govuk-heading-m" style="margin-bottom: 8px;">Imaginary Farms Ltd</h3>
+                    <p class="govuk-body sbi-number" style="margin-bottom: 8px;">SBI: 357951123</p>
+                </div>
+                <div class="govuk-grid-column-one-third">
+                     <h4 class="govuk-heading-m" style="float:right; margin-bottom: 8px;">John Smith</h4><br>
+                    <p class="govuk-body" style="clear:right; float:right; margin-bottom: 8px;"><a href="log-out">Sign out</a></p>
+                </div>
+            </div>
+            <hr>
+
+            {% if not hideBackButton %}
+
+                {{ govukBackLink ({
+                    text: 'Back',
+                    href: 'javascript:history.back()'
+                }) }}
+
+            {% endif %}
 
         </div>
 
