--- a/app/views/end-to-end/current/eligibility/common/login2.html
+++ b/app/views/end-to-end/current/eligibility/common/login2.html
@@ -24,9 +24,12 @@
                     You need to sign in to apply for a Water Management Grant.
                 </p>
 
-                        {{ govukInput({
+                                      {{ govukInput({
                         label: {
-                            text: "Email address"
+                            text: "Customer reference number (CRN)"
+                        },
+                        hint: {
+                            text: "The 10 digit number emailed to you when you registered with the Rural Payments service"
                         },
                         classes: "govuk-input--width-20",
                         id: "width-20",
@@ -37,18 +40,42 @@
                         label: {
                             text: "Password"
                         },
+                        hint: {
+                            text: "Your Rural Payments service password"
+                        },
                         classes: "govuk-input--width-20",
                         id: "width-20",
                         name: "width20"
                         }) }}
 
-                        <p><a href="forgotten-password">Forgotten your password?</a></p>
+                        {{ govukButton ({
+                            html: 'Sign in'
+                        }) }}
 
+                        <p><a href="#">I have forgotten my password</a></p>
 
-
-                {{ govukButton ({
-                    html: 'Sign in'
-                }) }}
+                        <br>
+                        <details class="govuk-details">
+                            <summary class="govuk-details__summary">
+                                <span class="govuk-details__summary-text">
+                                Help signing in
+                                </span>
+                            </summary>
+                            <div class="govuk-details__text">
+                                Contact the Rural Payments Agency by email or phone if:<br><br>
+                                <li>you have forgotten your CRN</li>
+                                <li>you have lost your CRN</li>
+                                <li>your CRN is not recognised</li>
+                                <br>
+                                Email: <a href="#">ruralpayments@defra.gov.uk</a><br>
+                                <br>
+                                Telephone: 03000 200 301<br>
+                                Monday to Friday, 8:30am to 5pm, except bank holidays<br>
+                                <a href="#">Find out about call charges (opens in new tab)</a><br>
+                                <br>
+                                <a href="#">Register for the Rural Payments service</a> if you do not have an account.
+                            </div>
+                        </details>
 
             </form>
 
