--- a/app/views/water-r3/current/eligibility/funding/productivity.html
+++ b/app/views/water-r3/current/eligibility/funding/productivity.html
@@ -22,7 +22,8 @@
             }
           },
           hint: {
-            html: '<p>Productivity is about how much is produced relative to inputs (for example increased yield for the same inputs or the same yield with lower inputs).</p><p>Select up to 2 options</p>'
+            html: '<p>Productivity is about how much is produced relative to inputs (for example increased yield for the same inputs or the same yield with lower inputs).</p>
+            <p class="govuk-hint">Select up to 2 options</p>'
           },
           items: [
             {
