opening RPS link in new window

--- a/app/views/end-to-end/current/eligibility/common/login.html
+++ b/app/views/end-to-end/current/eligibility/common/login.html
@@ -69,7 +69,7 @@
                                 Monday to Friday, 8:30am to 5pm, except bank holidays<br>
                                 <a href="#">Find out about call charges (opens in new tab)</a><br>
                                 <br>
-                                <a href="#">Register for the Rural Payments service</a> if you do not have an account.
+                                <a href="https://www.gov.uk/guidance/rural-payments-service-registering-and-updating-your-details" target="_blank" rel="noreferrer">Register for the Rural Payments service (opens in new tab)</a> if you do not have an account.
                             </div>
                         </details>
 
