--- a/app/views/end-to-end/current/task-list/list-1-2.html
+++ b/app/views/end-to-end/current/task-list/list-1-2.html
@@ -34,34 +34,36 @@
                 <ul class="govuk-task-list">
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
+                    <a class="govuk-link govuk-task-list__link" href="../eligibility/common/farming-type" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-1-status">
-                    Completed
+                           Completed
                     </div>
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
                     </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
-                    Completed
+                    <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+                           Completed
                     </div>
                 </li>
+                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                        <div class="govuk-task-list__name-and-hint">
+                            <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
+                        </div>
+                        <div class="govuk-task-list__status" id="application-1-status">
+                            <strong class="govuk-tag govuk-tag--blue">
+                            Not yet started
+                            </strong>
+                        </div>
+                    </li>
                 <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
-                    </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-3-status">
-                    Completed
-                    </div>
-                </li>
-                <li class="govuk-task-list__item">
-                    <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/outcome-accepted.html" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
+                        Expression of interest outcome
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-4-status">
-                    Accepted
+                        Cannot start yet
                     </div>
                 </li>
                 </ul>
@@ -75,15 +77,13 @@
 
                 <ul class="govuk-task-list">
 
-                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-                    <div class="govuk-task-list__name-and-hint">
-                        <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/download2" aria-describedby="application-1-status">Download application forms</a>
-                    </div>
-                    <div class="govuk-task-list__status" id="application-1-status">
-                        <strong class="govuk-tag govuk-tag--blue">
-                        Not yet started
-                        </strong>
-                    </div>
+                    <li class="govuk-task-list__item">
+                        <div class="govuk-task-list__name-and-hint">
+                            Download application forms
+                        </div>
+                        <div class="govuk-task-list__status" id="application-1-status">
+                            Cannot start yet
+                        </div>
                     </li>
 
                 <li class="govuk-task-list__item">
