--- a/app/views/end-to-end/current/task-list/list-1-2.html
+++ b/app/views/end-to-end/current/task-list/list-1-2.html
@@ -16,7 +16,7 @@
 
             <span class="content-section">
                 <!-- EOI approved, application ready to start -->
-                <h3 class="govuk-heading-m">You can start your application</h3>
+                <h3 class="govuk-heading-m">You can continue your expression of interest</h3>
                 <div class="govuk-inset-text">
                     Application deadline is 11:59pm on <strong>7 Jan 2025</strong>.
                 </div>
