--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -6,6 +6,7 @@
 {% endfor %}
 
 <script src="/public/javascripts/application.js"></script>
+<script src="/public/javascripts/accessible-autocomplete.min.js"></script>
 
 {% if useAutoStoreData %}
   <script src="/public/javascripts/auto-store-data.js"></script>
