trying to set account state

--- a/app/views/end-to-end/current/task-list/list-1-0.html
+++ b/app/views/end-to-end/current/task-list/list-1-0.html
@@ -1,6 +1,6 @@
 {% set hideBackButton = true %}
 
-{% if data['nosignin'] == 'true' %}
+{% if nosignin == 'true' %}
 
     {% extends 'end-to-end/layout.html' %}  
 
