hooking up end to end

--- a/app/views/end-to-end/current/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/current/eligibility/funding/check-details.html
@@ -204,7 +204,7 @@
      </div>
     <div class="govuk-grid-row govuk-!-padding-top-8">
         <div class="govuk-grid-column-two-thirds">
-            <form class="form" action="consent" method="post">
+            <form class="form" action="../../task-list/list-1-2" method="post">
                 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                     Continue
                 </button>
