--- a/app/views/end-to-end/current/eligibility/funding/results.html
+++ b/app/views/end-to-end/current/eligibility/funding/results.html
@@ -25,7 +25,7 @@
             <h1 class="govuk-heading-xl">Score results</h1>
 
             <p class="govuk-!-font-size-24">
-                Based on your answers, your project’s score is:
+                Based on your answers, your project's score is:
             </p>
 
             {% set insetHtml %}
@@ -317,7 +317,7 @@
 
             {{ govukButton ({
                 text: 'Continue',
-                href: 'business'
+                href: '../../task-list/list-1-1'
             }) }}
 
         </div>
