--- a/app/views/end-to-end/current/eligibility/funding/reference-number.html
+++ b/app/views/end-to-end/current/eligibility/funding/reference-number.html
@@ -61,9 +61,9 @@
         </ul>
 
           <br>
-          <form class="form" action="../common/login2" method="post">
+          <form class="form" action="../../task-list/list-1-3" method="post">
               {{ govukButton ({
-                    html: 'Sign out'
+                    html: 'Continue'
                 }) }}
           </form>
 
