--- a/app/views/end-to-end/current/task-list/list-1-2.html
+++ b/app/views/end-to-end/current/task-list/list-1-2.html
@@ -42,7 +42,7 @@
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
+                    <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/business" aria-describedby="expression-of-interest-2-status">Check your details</a>
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-1-status">
                            Completed
@@ -50,7 +50,7 @@
                 </li>
                     <li class="govuk-task-list__item govuk-task-list__item--with-link">
                         <div class="govuk-task-list__name-and-hint">
-                            <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-3-status">Register your interest</a>
+                            <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/consent" aria-describedby="expression-of-interest-3-status">Register your interest</a>
                         </div>
                         <div class="govuk-task-list__status" id="application-1-status">
                             <strong class="govuk-tag govuk-tag--blue">
