--- a/app/views/end-to-end/current/task-list/list-1-3.html
+++ b/app/views/end-to-end/current/task-list/list-1-3.html
@@ -42,22 +42,20 @@
                 </li>
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                           <a href="../eligibility/funding/business">Check your details</a>
+                        <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/business" aria-describedby="expression-of-interest-2-status">Check your details</a>
                     </div>
-                   <div class="govuk-task-list__status" id="expression-of-interest-1-status">
-                        <strong class="govuk-tag govuk-tag--blue">
-                            Not yet started
-                        </strong>
+                    <div class="govuk-task-list__status" id="expression-of-interest-2-status">
+                           Completed
                     </div>
                 </li>
-                <li class="govuk-task-list__item">
-                    <div class="govuk-task-list__name-and-hint">
-                        Register your interest
-                    </div>
-                    <div class="govuk-task-list__status" id="expression-of-interest-3-status">
-                        Cannot start yet
-                    </div>
-                </li>
+                    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+                        <div class="govuk-task-list__name-and-hint">
+                            <a class="govuk-link govuk-task-list__link" href="../eligibility/funding/consent" aria-describedby="expression-of-interest-3-status">Register your interest</a>
+                        </div>
+                            <div class="govuk-task-list__status" id="expression-of-interest-3-status">
+                                Completed
+                        </div>
+                    </li>
                 <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
                         Expression of interest outcome
