making H3 more descriptive of application stage

--- a/app/views/end-to-end/current/task-list/list-1-3.html
+++ b/app/views/end-to-end/current/task-list/list-1-3.html
@@ -16,9 +16,9 @@
 
             <span class="content-section">
                 <!-- EOI approved, application ready to start -->
-                <h3 class="govuk-heading-m">You can continue your expression of interest</h3>
+                <h3 class="govuk-heading-m">Your expression of interest is being reviewed by the Rural Payments Agency</h3>
                 <div class="govuk-inset-text">
-                    Application deadline is 11:59pm on <strong>7 Jan 2025</strong>.
+                    The review process will be completed by <strong>7 Jan 2025</strong>.
                 </div>
             </span>
 
