Matching task list term to new H3 term

--- a/app/views/end-to-end/current/task-list/list-1-3.html
+++ b/app/views/end-to-end/current/task-list/list-1-3.html
@@ -58,7 +58,7 @@
                     </li>
                 <li class="govuk-task-list__item">
                     <div class="govuk-task-list__name-and-hint">
-                        Expression of interest outcome
+                        Expression of interest review outcome
                     </div>
                     <div class="govuk-task-list__status" id="expression-of-interest-4-status">
                         Cannot start yet
