hint text added to stage 2

--- a/app/views/end-to-end/current/task-list/list-1-3.html
+++ b/app/views/end-to-end/current/task-list/list-1-3.html
@@ -72,6 +72,7 @@
                 <h2 class="govuk-prototype-kit-task-list__section">
                     <span class="govuk-prototype-kit-task-list__section-number">2. </span> Apply
                 </h2>
+                <p class="govuk-hint">You will be notified if you are approved to start the full application</p>
 
                 <ul class="govuk-task-list">
 
