adding post mvp journey

--- a/app/views/end-to-end/index.html
+++ b/app/views/end-to-end/index.html
@@ -57,7 +57,15 @@
         <h2 class="govuk-heading-l">User research</h2>
          
         <p class='govuk-list app-list--definition'>
-            <a href='current/start-page' class="govuk-link--no-visited-state">Start page</a></p>
+            <a href='current/start-page' class="govuk-link--no-visited-state">MVP journey</a><br>
+            Adding login via RPS Account and account header (header may change as non-standard, inherited). 
+            Adding task list.
+        </p>
+
+        <p class='govuk-list app-list--definition'>
+          <a href='post-mvp/start-page.html' class="govuk-link--no-visited-state">Post-MVP journey</a><br>
+            Adding pre-populated data from RPS Account when logged in. Showing account view with application status.
+      </p>
             
       </div>
 
