--- a/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
+++ b/app/views/end-to-end/post-mvp/eligibility/funding/check-details.html
@@ -80,31 +80,18 @@
   
                     <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Business address</strong>
-                        </th>
-                        <td class="govuk-table__cell">
-                           <p> {{ data['farmer-address1'] }}, {{ data['farmer-address2'] }}</p>
-                           <p> {{ data['farmer-town'] }}</p>
-                           <p> {{ data['farmer-county'] }} </p>
-                           <p> {{ data['farmer-postcode'] }} </p>
-                        </td>
-                    </tr>
-                    <tr class="govuk-table__row--no-border">
-                        <th  scope="row" class="govuk-table__header">
                             <strong>Project postcode</strong>
                         </th>
                         <td class="govuk-table__cell">
-                           <p> {{ data['project-postcode'] }} </p>
-
-
+                           {{ data['project-postcode'] or 'BO12 0LN' }}
                         </td>
-
-
                     </tr>
+
                 </tbody>
             </table>
 
             {# applicant details - data pre-populated from RPS account data if logged in #}
+
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
@@ -114,7 +101,7 @@
                                 <p class="govuk-body govuk-!-font-size-24"><strong>Business details</strong></p>
                             </dt>
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="business">
+                                <a class="govuk-link" href="farmer-details">
                                     Change<span class="govuk-visually-hidden">business details</span>
                                 </a>
                             </dd>
@@ -123,50 +110,68 @@
                     <hr>
                 </thead>
                 <tbody class="govuk-table__body">
-                    <tr class="govuk-table__row">
-                        <th  scope="row" class="govuk-table__header">
-                            <strong>Project name</strong>
-                        </th>
-                        <td class="govuk-table__cell">
-                            <p>{{ data['project-name'] }}</p>
-                        </td>
-                    </tr>
-                    <tr class="govuk-table__row">
+                    <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
                             <strong>Business name</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{ data['business-name'] }}</p>
+                           {{ data['farmer-title'] or 'Imaginary Farms Ltd' }} 
                         </td>
                     </tr>
-                    <tr class="govuk-table__row">
+                    <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Number of employees</strong>
+                            <strong>Single Business<br>Identifier (SBI)</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{ data['employees'] }}</p>
+                            {{ data['sbi']  or '1234567898' }}
                         </td>
                     </tr>
-                    <tr class="govuk-table__row">
+                    <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Business turnover</strong>
+                            <strong>Business address</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{ data['turnover'] }}</p>
+                            {{ data['farmer-address1'] }} {{ data['farmer-address2'] or '2 Lane Road, Farm Valley'}}<br>
+                            {{ data['farmer-town'] or 'Boston Spa' }}<br>
+                            {{ data['farmer-county'] or 'West Yorkshire' }}
                         </td>
                     </tr>
-                    <tr class="govuk-table__row">
+                    <tr class="govuk-table__row--no-border">
                         <th  scope="row" class="govuk-table__header">
-                            <strong>Single Business Identifier (SBI)</strong>
+                            <strong>Business postcode</strong>
                         </th>
                         <td class="govuk-table__cell">
-                            <p>{{ data['sbi'] }}</p>
+                            {{ data['farmer-postcode'] or 'BO12 0LN' }}
                         </td>
                     </tr>
+                    {# <tr class="govuk-table__row--no-border">
+                        <th  scope="row" class="govuk-table__header">
+                            <strong> Mobile number</strong>
+                        </th>
+                        <td class="govuk-table__cell">
+                            {{ data['farmer-mobile'] or '07421 589 658'  }}
+                        </td>
+                    </tr>
+                    <tr class="govuk-table__row--no-border">
+                        <th  scope="row" class="govuk-table__header">
+                            <strong> Landline number</strong>
+                        </th>
+                        <td class="govuk-table__cell">
+                            {{ data['farmer-landline'] or '01295 544 778'  }}
+                        </td>
+                    </tr>
+  
+                    <tr class="govuk-table__row--no-border">
+                        <th  scope="row" class="govuk-table__header">
+                            <strong>Project postcode</strong>
+                        </th>
+                        <td class="govuk-table__cell">
+                           {{ data['project-postcode'] or 'BO12 0LN' }}
+                        </td>
+                    </tr> #}
 
                 </tbody>
             </table>
-            <br><br>
 
             {# include agent details only if applicant is Agent  #}
 
